Add SignOut rpc (#13)
